# belzebubchr

./: CMakeLists.txt  README.md  attribute.h  belzebubchr.cpp  belzebubchr.h  belzebubmagic.h  file.h  itemtype.h  main.cpp  recipe.h  spells.h  transformation.txt
gui/: belzebubchr.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  recipesdlg.cpp  recipesdlg.h  recipesdlg.ui  spellsdlg.cpp  spellsdlg.h  spellsdlg.ui
